fix: safari dark mode, hovers

--- a/alpaca_calendar/src/styles/css/_variables.scss
+++ b/alpaca_calendar/src/styles/css/_variables.scss
@@ -8,14 +8,6 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-
-  --bg-primaty: #fff;
-  --text-primary: #333;
-  --cell-size: min(4.5vw, 42px);
-  --transition: 0.25s ease;
-}
-
-[data-theme="dark"] {
 }
 
 body {
@@ -23,15 +15,14 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
-
+  background-color: #ccc;
   transition:
     background-color 0.3s,
     color 0.3s;
 }
 
-body.dark-theme {
-  background-color: #333;
-  color: #fff;
+.dark-bg {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 h1 {
