--- a/alpaca_calendar/src/styles/css/style.scss
+++ b/alpaca_calendar/src/styles/css/style.scss
@@ -33,7 +33,7 @@
 }
 
 .controls {
-  padding: 0 8px;
+  padding: 8px 8px 0px;
   display: flex;
   gap: 6px;
   flex-direction: column-reverse;
@@ -42,8 +42,9 @@
 .month {
   display: flex;
   position: relative;
-  z-index: 2;
+  z-index: 10;
   min-height: 40px;
+  padding-bottom: 8px;
   justify-content: space-between;
   align-items: center;
   text-transform: uppercase;
@@ -86,9 +87,9 @@
   text-transform: uppercase;
   max-width: fit-content;
   font-family: "Roboto";
-  z-index: 2;
-  font-size: 8px;
-  padding: 4px 8px;
+  z-index: 10;
+  font-size: 12px;
+  padding: 4px 10px;
   font-weight: 500;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 8px;
@@ -112,8 +113,8 @@
 
 .day,
 .next-month {
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   font-size: 12px;
   font-family: "Roboto";
   font-weight: 500;
